--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Rough Notation Test</title>
     <style>
         body {
@@ -26,6 +27,7 @@
         <h2>Section 1</h2>
         <p>This is a <span data-annotation="underline" data-annotation-color="#ff6b6b">highlighted text</span> with an underline annotation.</p>
         <p>Here's some <span data-annotation="circle" data-annotation-color="#4ecdc4">circled text</span> for demonstration.</p>
+        <p>Here is an <a href="https://www.google.com/">inline link</a> as an example.</p>
     </div>
 
     <div class="section">
@@ -44,6 +46,8 @@
         <h2>Section 4</h2>
         <p>Final section with <span data-annotation="crossed-off" data-annotation-color="#ff6b6b">crossed off text</span> to complete the demonstration.</p>
     </div>
+
+
 
     <script type="module" src="js/app.js"></script>
 </body>
